--- a/stylesheets/sass/01-config/_variables.scss
+++ b/stylesheets/sass/01-config/_variables.scss
@@ -9,6 +9,7 @@ $black: #191826;
 $font-ibm: "IBM Plex Sans", sans-serif;
 
 // Breakpoints
+$mobile: rem(375px);
 $tablet: rem(768px);
 $desktop: rem(1440px);
 
